# 3d_labeling_tools

./: .gitignore  LICENSE  README.md  index.html  label_tool.html  webgl_loader_pcd.html
cpp/: CMakeLists.txt  README.md  build_filter.bash  label_filter.cpp
css/: label_tool.css
doc/: Label-Tool-API.md
input/Annotations/: 000000.txt  000001.txt
input/PCDPoints/000000/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  all.pcd
input/PCDPoints/000001/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  all.pcd
js/: 3d_labeling_tools.js  base_label_tool.js  image_label_tool.js  main.js  pcd_label_tool.js
js/util/: ajax_wrapper.js  bbox.js  bbox_table.js  class.js  workspace.js
python/: label_filter.py  output_label.py
